fix(select): adjust padding and layout for better alignment

--- a/packages/varlet-ui/src/field-decorator/fieldDecorator.less
+++ b/packages/varlet-ui/src/field-decorator/fieldDecorator.less
@@ -67,7 +67,6 @@
 .var-field-decorator {
   position: relative;
   width: 100%;
-  overflow: hidden;
   color: var(--field-decorator-text-color);
 
   &__controller {
